# bank_transactions_algorithm

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
src/: __init__.py  func.py  main.py  utils.py
tests/: file.json  test_func.py  test_main.py  test_utils.py
