[tool.poetry]
name = "course-work-project"
version = "0.1.0"
description = ""
authors = ["natalya tomova <natalyayurevna19@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work_project"}]

[tool.poetry.dependencies]
python = "^3.10"
datetime = "^5.2"
pathlib = "^1.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

